@@ -59,6 +59,7 @@ GType               twitux_app_get_type                     (void) G_GNUC_CONST;
 void                twitux_app_create                       (void);
 TwituxApp *	        twitux_app_get                          (void);
 GtkWidget *         twitux_app_get_window                   (void);
+void				twitux_app_set_visibility				(gboolean	   visible);
 void				twitux_app_set_statusbar_msg	        (gchar        *message);
 void				twitux_app_set_friends	                (GList        *friends);
 void				twitux_app_add_friend                   (TwituxUser   *user);
