@@ -1,3 +1,7 @@
+2008-02-08  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* POTFILES.in: Add src/twitux-hint.c
+	
 2008-02-07  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* fr.po:
